#18-CTS Modify addresses methods (simplify using only one instead of adding 'new'), add order methods in backend and in view [WIP], refactor the swagger doc, add vue-sync to keep pages in sync with vue, change myaccount route and and the id in it
